// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ChatMessage] Render a no viewed ChatMessage Component 1`] = `
.c0 {
  background-color: #35234e;
  min-height: 60px;
}

<div
  class="c0"
>
  Some Text
</div>
`;

exports[`[ChatMessage] Render a viewed ChatMessage Component 1`] = `
.c0 {
  background-color: #8255b6;
  min-height: 60px;
}

<div
  class="c0"
>
  Some Text
</div>
`;
